--- a/templates/product.html
+++ b/templates/product.html
@@ -79,16 +79,15 @@
 <div class="container my-5">
     <div class="card details-card p-0">
         <div class="row">
-
-            <div class="col-md-6 col-sm-12">
-                <img class="img-fluid details-img" src="https://source.unsplash.com/5Tm4YRqnNcM" alt="">
+            <div class="col-md-6 col-sm-12 d-flex align-items-center">
+                <img class="img-fluid details-img" src="{{ product.image }}" alt="">
             </div>
             <div class="col-md-6 col-sm-12 description-container p-5">
                 <div class="main-description">
                     <p class="product-category mb-0">Graphite</p>
-                    <h3>iPhone 7 Graphite - 256GB</h3>
+                    <h3>{{ product.name }}</h3>
                     <hr>
-                    <p class="product-price">$1199.00</p>
+                    <p class="product-price">${{ product.price }}</p>
                     <form class="add-inputs" method="post">
                         <input type="number" class="form-control" id="cart_quantity" name="cart_quantity" value="1"
                                min="1" max="10">
@@ -114,9 +113,9 @@
 
                     <p class="product-title mt-4 mb-1">Share this product</p>
                     <ul class="social-list">
-                        <li><a href="#"><i class="fa-brands fa-facebook"></a></i></li>
-                        <li><a href="#"><i class="fa-brands fa-twitter"></a></i></li>
-                        <li><a href="#"><i class="fa-brands fa-square-instagram"></a></i></li>
+                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
 
                     </ul>
                 </div>
@@ -124,4 +123,5 @@
         </div>
         <!-- End row -->
     </div>
+</div>
 {% endblock %}
