--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,4 +1,4 @@
-<header>
+ <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">Navbar</a>
@@ -10,7 +10,7 @@
                 <ul class="navbar-nav">
                     {% for p in catalogies %}
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">{{ p.name }}</a>
+                        <a class="nav-link active" aria-current="page" href="/?category_id={{p.id}}">{{ p.name }}</a>
                     </li>
                     {% endfor %}
                 </ul>
