--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -13,6 +13,9 @@
                         <a class="nav-link active" aria-current="page" href="/?category_id={{p.id}}">{{ p.name }}</a>
                     </li>
                     {% endfor %}
+                    <li class="nav-item">
+                        <a class="d-flex gap-2 nav-link text-danger" href="/cart">&#128722; <span class="badge bg-danger cart-counter">{{cart.total_quantity}}</span></a>
+                    </li>
                 </ul>
             </div>
             <form class="input-group justify-content-end" action="/">
