--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,13 +4,16 @@
 <section class="container my-4">
     <nav aria-label="Page navigation example">
       <ul class="pagination">
-          {% if current_page < product_page + 1 %}
-            <li class="page-item"><a class="page-link" href="/?page={{current_page + 1}}">Previous</a></li>
+          {% if current_page > 1 %}
+            <li class="page-item"><a class="page-link" href="/?page={{current_page - 1}}">Previous</a></li>
           {% endif %}
           {% for page in range(product_page) %}
             <li class="page-item"><a class="page-link" href="/?page={{page + 1}}">{{ page + 1 }}</a></li>
           {% endfor %}
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          {% if current_page < product_page %}
+            <li class="page-item"><a class="page-link" href="/?page={{current_page + 1}}">Next</a></li>
+          {% endif %}
+
       </ul>
     </nav>
     <div class="row gap-3">
@@ -21,12 +24,15 @@
                 <h5 class="card-title">{{ p.name }}</h5>
                 <p class="card-text">{{ p.price }}</p>
                 <a href="/products/{{ p.id }}" class="btn btn-primary">Xem thêm</a>
-                <a href="#" class="btn btn-primary">Mua</a>
+                <a href="javascript:;" onclick="addToCart({{p.id}}, '{{p.name}}', {{p.price}})" class="btn btn-danger">Mua</a>
             </div>
         </div>
         {% endfor %}
     </div>
 </section>
+
+<script src="{{ url_for('static', filename='js/cart.js') }}"></script>
+
 {% endblock %}
 
 
